날짜 수정 및 지도 api 연동

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#f5f0eb" />
 
-    <!-- Kakao SDK -->
+    <!-- Kakao Share SDK -->
     <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.4/kakao.min.js"
             crossorigin="anonymous"></script>
+    <!-- Kakao Maps SDK -->
+    <script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=376798100917bd24dbc8901bece6036a&autoload=false"></script>
 
     <!-- Open Graph Meta -->
     <meta property="og:title" content="결혼합니다" />
