웹 접근성, 웹 편의성 수정

--- a/index.html
+++ b/index.html
@@ -2,8 +2,27 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#f5f0eb" />
+    <meta name="description" content="김철수 ♥ 이영희 결혼식에 소중한 분들을 초대합니다. 2027년 10월 10일 토요일 오후 2시, 더채플앳청담 그랜드홀" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+
+    <!-- Open Graph Meta -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="김철수 ♥ 이영희 결혼합니다" />
+    <meta property="og:description" content="2027년 10월 10일 토요일 오후 2시 | 더채플앳청담 그랜드홀. 소중한 분들을 초대합니다." />
+    <meta property="og:image" content="/images/gallery/mainBg.png" />
+    <meta property="og:locale" content="ko_KR" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="김철수 ♥ 이영희 결혼합니다" />
+    <meta name="twitter:description" content="2027년 10월 10일 토요일 오후 2시 | 더채플앳청담 그랜드홀. 소중한 분들을 초대합니다." />
+    <meta name="twitter:image" content="/images/gallery/mainBg.png" />
+
+    <title>김철수 ♥ 이영희 결혼합니다</title>
 
     <!-- Kakao Share SDK -->
     <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.4/kakao.min.js"
@@ -11,19 +30,13 @@
     <!-- Kakao Maps SDK -->
     <script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=376798100917bd24dbc8901bece6036a&autoload=false"></script>
 
-    <!-- Open Graph Meta -->
-    <meta property="og:title" content="결혼합니다" />
-    <meta property="og:description" content="소중한 분들을 초대합니다" />
-    <meta property="og:type" content="website" />
-
-    <title>Wedding Invitation</title>
-
     <!-- Korean Serif Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@400;700&family=Noto+Serif+KR:wght@300;400;500;600&display=swap" rel="stylesheet" />
   </head>
   <body>
+    <noscript>청첩장을 보려면 JavaScript를 활성화해주세요.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
